feat: bump deprecated vscode theme colors

--- a/configs/vscode/theme.jsonc
+++ b/configs/vscode/theme.jsonc
@@ -10,8 +10,8 @@
 		"editor.foreground": "#d4d4d4",
 		"editor.inactiveSelectionBackground": "#3a3d41",
 		"editor.selectionHighlightBackground": "#add6ff26",
-		"editorIndentGuide.activeBackground": "#707070",
-		"editorIndentGuide.background": "#404040",
+		"editorIndentGuide.activeBackground1": "#707070",
+		"editorIndentGuide.background1": "#404040",
 		"input.border": "#009485",
 		"input.placeholderForeground": "#a6a6a6",
 		"list.activeSelectionBackground": "#5984e3",
