--- a/configs/tmux/files/.tmux.conf
+++ b/configs/tmux/files/.tmux.conf
@@ -21,7 +21,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
 bind -r c neww -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
